syntax = "proto3";
package trending;
option java_package = "trending";

option java_multiple_files = true;
service TrendingMoviesService {
  rpc GetTopTrendingMovies (TrendingMoviesRequest) returns (TrendingMoviesResponse);
}

message TrendingMoviesRequest {
  int32 limit = 1;  // Number of top movies to return (default: 10)
}

message Movie {
  string id = 1;
  string title = 2;
  string description = 3;
  double rating = 4;
}

message TrendingMoviesResponse {
  repeated Movie movies = 1;
}

